--- a/src/client/resources/assets/partnership/lang/de_de.json
+++ b/src/client/resources/assets/partnership/lang/de_de.json
@@ -20,7 +20,7 @@
   "tooltip.item.partnership.sailors_hat": "Wird von der Mannschaft getragen.",
 
   "block.partnership.marine_cannon": "Marinekanone",
-  "tooltip.block.partnership.marine_cannon": "Kann konfiguriert und aus einem bestimmten Winkel abgefeuert werden. Versenkt Schiffe sofort, wenn sie getroffen werden.\nMuss mit einer Kanonenkugel und mit bis zu drei Schießpulver geladen und dann mit einem Redstone-Signal gestartet werden.",
+  "tooltip.block.partnership.marine_cannon": "Schießt Kanonnenkugeln, wenn es eingeschaltet wird. Schiffe versinken bei Treffern sofort.",
 
   "item.partnership.kayak": "Kajak",
   "tooltip.item.partnership.kayak": "Etwas größer als ein herkömmliches Boot, bietet jedoch genug Platz für bis zu drei Passagiere.",
